<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rel_content"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    android:background="@color/hxs_color_trans_four">

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/hx_login_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/hxs_color_white"
        app:cardCornerRadius="8dp"
        app:cardElevation="1dp"
        app:cardMaxElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/relogin_title"
                android:textColor="@color/hx_color_black"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/tv_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="20dp"
                android:text="@string/relogin_msg"
                android:textColor="@color/hxs_color_black4" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="4"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/relogin_cancel"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="?android:listDivider" />

                <TextView
                    android:id="@+id/tv_confirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/relogin_confirm"
                    android:textColor="@color/hxs_color_blue1"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>

