<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rel_content"
    android:layout_width="@dimen/hx_login_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/hx_login_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/dialog_card_close_img"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:padding="8dp"
                android:src="@drawable/hx_btn_close" />
            <!--title-->
            <TextView
                android:id="@+id/dialog_card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/hx_login_title"
                android:text="@string/hx_prompt"
                android:textColor="@color/hx_color_black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dialog_card_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="24dp"
                android:textColor="@color/hx_color_black"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#e0e0e0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/dialog_card_cancel_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:text="@string/hx_cancel"
                android:textColor="#3e3e3e"
                android:textSize="15sp" />

            <View
                android:id="@+id/dialog_card_btn_line"
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#e0e0e0" />

            <Button
                android:id="@+id/dialog_card_submit_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:text="@string/hx_confirm"
                android:textColor="@color/hx_main_color"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>

